Add build dir to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 #####
 # First, rules intended to apply in all subdirectories.
 # These contain no slash, or only a trailing slash.
-
+build*
 *.cover
 *.iml
 *.o
